# app/app.py
@@ -9,14 +9,16 @@ db_session = None
 db_session = orm.init_db('sqlite:///test.db')
 
 
-def get_evento(IDEvento, aclass=None):
-    if aclass is None:
-        aclass = orm.Evento
-    evento = db_session.query(aclass).filter(
-        aclass.IDEvento == IDEvento
-    ).one_or_none()
-    print(evento.dump() if evento is not None else 'None')
-    return evento.dump() if evento is not None else ('Not found', 404)
+def get_evento(IDEvento, aclass):
+    try:
+        evento = db_session.query(aclass).filter(
+            aclass.IDEvento == IDEvento
+        ).one_or_none()
+        # print(evento.dump() if evento is not None else 'None')
+        return evento.dump() if evento is not None else ('Not found', 404)
+    except Exception as err:
+        logging.error(err, exc_info=True)
+        return err.msg, 400
 
 def add_evento(aclass, evento):
     logging.info('Creating evento %s %s..' %
@@ -33,6 +35,11 @@ def posicaoconteiner(evento):
 def get_posicaoconteiner(IDEvento):
     return get_evento(IDEvento, orm.PosicaoConteiner)
 
+def pesagemmaritimo(evento):
+    return add_evento(orm.PesagemMaritimo, evento)
+
+def get_pesagemmaritimo(IDEvento):
+    return get_evento(IDEvento, orm.PesagemMaritimo)
 
 def get_acessoveiculo(IDEvento):
     return get_evento(IDEvento, orm.AcessoVeiculo)
@@ -42,7 +49,7 @@ def get_acessoveiculo(IDEvento):
         orm.AcessoVeiculo.IDEvento == IDEvento
     ).join(orm.ConteineresGate).one_or_none()
     if acessoveiculo is None:
-        return {'message': 'Evento não encontrado.'}, 400
+        return {'message': 'Evento não encontrado.'}, 404
     acessoveiculo_schema = orm.AcessoVeiculoSchema()
     data = acessoveiculo_schema.dump(acessoveiculo).data
 
@@ -55,12 +62,27 @@ def acessoveiculo(evento):
     acessoveiculo = orm.AcessoVeiculo(**evento)
     db_session.add(orm.AcessoVeiculo(**evento))
     conteineres = evento.get('conteineres')
-    for conteiner in conteineres:
-        logging.info('Creating conteiner %s..', conteiner.get('numero'))
-        conteinergate = orm.ConteineresGate(acessoveiculo, numero=conteiner.get('numero'))
-        db_session.add(conteinergate)
+    if conteineres:
+        for conteiner in conteineres:
+            logging.info('Creating conteiner %s..', conteiner.get('numero'))
+            conteinergate = orm.ConteineresGate(acessoveiculo,
+                                                numero=conteiner.get('numero'),
+                                                avarias=conteiner.get('avarias'),
+                                                lacres=conteiner.get('lacres'),
+                                                vazio=conteiner.get('vazio'))
+            db_session.add(conteinergate)
+    reboques = evento.get('reboques')
+    if reboques:
+        for reboque in reboques:
+            logging.info('Creating reboque %s..', reboque.get('placa'))
+            reboquegate = orm.ReboquesGate(acessoveiculo,
+                                                placa=reboque.get('placa'),
+                                                avarias=reboque.get('avarias'),
+                                                lacres=reboque.get('lacres'),
+                                                vazio=reboque.get('vazio'))
+            db_session.add(reboquegate)
     db_session.commit()
-    return NoContent, 200
+    return 'Evento incluido', 200
 
 
 
@@ -75,8 +97,15 @@ def get_eventos(limit, animal_type=None):
 
 logging.basicConfig(level=logging.INFO)
 
-if __name__ == '__main__':
+
+def create_app():
     app = connexion.FlaskApp(__name__)
     app.add_api('openapi.yaml')
-    application = app.app
+    return app
+
+def main():
+    app = create_app()
     app.run(debug=True, port=8000, threaded=False)
+
+if __name__ == '__main__':
+    main()
